--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,16 @@
 	    <artifactId>jersey-media-json-jackson</artifactId>
 	    <version>2.25.1</version>
 	</dependency>
+	<dependency>
+    	<groupId>com.itextpdf</groupId>
+    	<artifactId>itextpdf</artifactId>
+    	<version>5.5.10</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.pdfbox</groupId>
+	    <artifactId>pdfbox</artifactId>
+	    <version>2.0.4</version>
+	</dependency>
 	
   </dependencies>
 </project>
