--- a/pom.xml
+++ b/pom.xml
@@ -55,5 +55,13 @@
 	    <version>2.0.15</version>
 	</dependency>
 	
+		<!-- https://mvnrepository.com/artifact/de.jensd/fontawesomefx -->
+	<dependency>
+	    <groupId>de.jensd</groupId>
+	    <artifactId>fontawesomefx</artifactId>
+	    <version>8.9</version>
+	</dependency>
+	
+	
   </dependencies>
 </project>
